// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
</Link>
`;

exports[`2. tile b 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`8. tile h 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
    <Text>
      <Text>
        Richard Lloyd Parry
      </Text>
      <Text>
        , Hanoi
      </Text>
    </Text>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`9. tile i 1`] = `
<Link
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`10. tile j 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`11. tile k 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`12. tile l 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`13. tile m 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 10,
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`14. tile n 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`15. tile o 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`16. tile p 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "paddingVertical": 20,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
    <Text>
      <Text>
        Richard Lloyd Parry
      </Text>
      <Text>
        , Hanoi
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`17. tile q 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
</Link>
`;

exports[`18. tile r 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 15,
      "paddingHorizontal": 20,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
</Link>
`;

exports[`19. tile s 1`] = `
<View>
  <View>
    <Text>
      Nature notes
    </Text>
  </View>
  <Text>
    <Text>
      <Text>
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text>
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text>
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text>
        Wombling Free 
      </Text>
      (1978), 
      <Text>
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text>
    <Text>
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`20. tile t 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`21. tile u 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
</Link>
`;

exports[`22. tile v 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`23. tile w 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
</Link>
`;

exports[`24. tile x 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <Text>
      <Text>
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`25. tile y 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`26. tile z 1`] = `
<Link
  linkStyle={
    Object {
      "margin": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
  <Image
    aspectRatio={0.8}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;

exports[`27. tile aa 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`28. tile ab 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
    <Text>
      <Text>
        Richard Lloyd Parry
      </Text>
      <Text>
        , Hanoi
      </Text>
    </Text>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`29. tile ae 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`30. tile ag 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 10,
      "paddingHorizontal": 20,
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`31. tile aj 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
    }
  }
  url="/crossword/123"
>
  <View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`32. tile ak 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
    }
  }
  url="/crossword/123"
>
  <View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`33. tile al 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "column",
      "paddingHorizontal": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`34. tile am 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingTop": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`35. tile an 1`] = `
<Link
  linkStyle={
    Object {
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`36. tile ap 1`] = `
<Link
  linkStyle={
    Object {
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`37. tile ad 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`38. tile ac 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;
